--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,15 @@
   color: white;
 }
 
+.nav{
+  width: 100%;
+}
+.nav-itam{
+  color: #fafafa;
+  /* list-style-type: none; */
+  text-decoration: none;
+}
+
 .App-link {
   color: #61dafb;
 }
