引入ts包，底部导航

--- a/src/App.css
+++ b/src/App.css
@@ -14,21 +14,21 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .nav{
   width: 100%;
+  display: flex;
+  bottom: 0%;
 }
 .nav-itam{
-  color: #fafafa;
+  /* color: #fafafa; */
   /* list-style-type: none; */
   text-decoration: none;
 }
