--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
+.app {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
 }
 
-.nav{
-  width: 100%;
+.top {
+  flex: 0;
+  /* border-bottom: solid 1px var(--adm-color-border); */
+}
+
+.body {
+  flex: 1;
   display: flex;
-  bottom: 0%;
-}
-.nav-itam{
-  /* color: #fafafa; */
-  /* list-style-type: none; */
-  text-decoration: none;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bottom {
+  flex: 0;
+  /* border-top: solid 1px var(--adm-color-border); */
 }
