--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,20 @@
 .app {
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  max-width: 640px;
   display: flex;
   flex-direction: column;
+  background-color: #C20C0C;
+  color: #fff;
 }
 
 .top {
+  width: 100%;
   flex: 0;
-  /* border-bottom: solid 1px var(--adm-color-border); */
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  background-color: #C20C0C;
 }
 
 .body {
@@ -14,9 +22,90 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #fafafa;
+  color: #333;
+  margin-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .bottom {
+  width: 100%;
   flex: 0;
-  /* border-top: solid 1px var(--adm-color-border); */
+  background-color: #fafafa;
+  position: fixed;
+  bottom: 0;
+  z-index: 2;
+}
+/* 公共样式 */
+.d-flex{
+  display: flex;
+}
+.f-wrap{
+  flex-wrap: wrap;
+}
+.f-left{
+  float: left;
+}
+.f-right{
+  float: right;
+}
+.t-left{
+  text-align: left;
+}
+.t-center{
+  text-align: center;
+}
+.t-right{
+  text-align: right;
+}
+.color-333{
+  color: #333;
+}
+.color-767676{
+  color: #767676;
+}
+.color-C20C0C{
+  color: #C20C0C;
+}
+.f-08{
+  font-size: 0.8rem;
+}
+.f-1{
+  font-size: 1rem;
+}
+.f-2{
+  font-size: 2rem;
+}
+.m-1{
+  margin: 1rem;
+}
+.m-2{
+  margin: 2rem;
+}
+.mr-1{
+  margin-right: 1rem;
+}
+.mr-2{
+  margin-right: 2rem;
+}
+.mb-1{
+  margin-bottom: 1rem;
+}
+.mb-2{
+  margin-bottom: 2rem;
+}
+.mb-03{
+  margin-bottom: 0.3rem;
+}
+.ellipsis{
+  display:-webkit-box;
+  -webkit-box-orient:vertical;
+  -webkit-line-clamp:1;
+  overflow:hidden;
+}
+.border-b-eee{
+  border-bottom: 1px solid #eee;
+}
+.box-shadow{
+  box-shadow: 0px 0px 15px #767676
 }
